--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -40,13 +40,14 @@ main {
   font-family: Georgia, Times, "Times New Roman", serif;
 
   /* Typography */
-  font-size: 24px;
+  font-size: 34px;
   font-weight: bold;
-  color: #fff;
+  color: #4aaa;
 
   /* Visual */
 
-  background: #4aaaa5;
+  background: #fff;
+   
 }
 
 /* override bootstrap hover color and border */
@@ -55,7 +56,7 @@ main {
 }
 
 .navbar {
-  background: white;
+  background:#4aaaa5;
   border: none;
   width:100%;
 
